tests/transpiler/x/scala/order_by_map.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/order_by_map.scala:7: error: No implicit Ordering defined for scala.collection.mutable.Map[String,Any].
    val sorted: ArrayBuffer[Item] = ({ var _tmp = ArrayBuffer[(Map[String,Any],Item)]() ; for (x <- data) { _tmp.append((Map("a" -> x.a, "b" -> x.b), x)) }; var _res = _tmp.sortBy(_._1).map(_._2); _res })
                                                                                                                                                                                   ^
one error found
