tests/transpiler/x/scala/order_by_map.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:42:47 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    case class Item(a: Int, b: Int)
    val data: ArrayBuffer[Item] = ArrayBuffer(Item(1, 2), Item(1, 1), Item(0, 5))
    val sorted: ArrayBuffer[Item] = ({ var _tmp = ArrayBuffer[(Map[String,Any],Item)]() ; for (x <- data) { _tmp.append((Map("a" -> x.a, "b" -> x.b), x)) }; var _res = _tmp.sortBy(_._1).map(_._2); _res })
    println(sorted)
  }
}
